# GCRI-Graphormer

./: job_script.sh  pyproject.toml
data/: NP-LRI-RAMP-G-C.csv  syntatics.csv
data/NP_KV_ALL/: NP-KV-ALL-G-C.csv
deprecated/: implement_model.py
implement/: implement.py
src/: datamodule.py  hparam.py  main.py  model.py  simplerun.py
src/hugging_face/: datamodule.py  hparam.py  main.py  model.py  simplerun.py
