[project]
name = "gcri-graphormer"
version = "0.1.0"
description = "Implementation of graphormer model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "cython>=3.0.11",
    "datasets>=3.2.0",
    "lightning>=2.4.0",
    "rdkit>=2024.3.6",
    "torch-geometric>=2.6.1",
    "torch>=2.5.0",
    "transformers>=4.47.0",
]
